# python-vidsub

./: .appveyor.yml  .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  movies  movies.py  pyproject.toml  setup.cfg  setup.py  tox.ini  tv-find-movie
.github/: renovate.json5
ci/: requirements.txt
ci/templates/: .appveyor.yml
docs/: conf.py  installation.rst  requirements.txt  usage.rst
docs/reference/: index.rst  video_tools.rst  videodrome.rst  vidsub.rst
repo-movies/: movies.py
src/video_tools/: __main__.py  cli.py
src/videodrome/: __main__.py  cli.py
src/vidsub/: __init__.py  __main__.py  cli.py  constants.py
tests/: test_video_tools.py  test_videodrome.py  test_vidsub.py
