[tool.poetry]
name = "video-tools"
version = "0.1.0"
description = "Tools to sync subtitles and fix video file names"
authors = ["Augusto W. Andreoli <andreoliwa@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/andreoliwa/python-video-tools"
repository = "https://github.com/andreoliwa/python-video-tools"
documentation = "https://python-video-tools.readthedocs.io/"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Utilities",
    "Topic :: Multimedia :: Video"
]

[tool.poetry.urls]
"Changelog" = "https://python-video-tools.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/andreoliwa/python-video-tools/issues"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vid = "video_tools.cli:main"
