[tool.poetry]
name = "vidsub"
version = "0.1.0"
description = "Tools to sync subtitles and fix video file names"
authors = ["W. Augusto Andreoli <andreoliwa@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/andreoliwa/python-vidsub"
repository = "https://github.com/andreoliwa/python-vidsub"
documentation = "https://python-vidsub.readthedocs.io/"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
    "Topic :: Multimedia :: Video"
]

[tool.poetry.urls]
"Changelog" = "https://python-vidsub.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/andreoliwa/python-vidsub/issues"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.0"
clib = { git = "https://github.com/andreoliwa/python-clib.git", branch = "develop" }
# clib = {path = "../python-clib"}
python-magic = "*"
identify = "*"
python-slugify = "*"
cinemagoer = "*"
transmissionrpc = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vd = "vidsub.cli:main"

[tool.isort]
profile = "black"
line_length = 120
known_first_party = "vidsub"
default_section = "THIRDPARTY"
forced_separate = "test_vidsub"
skip = ".tox,.eggs,ci/templates,build,dist"
